<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:textColor="@color/md_black_1000"
        android:textSize="@dimen/text_16sp"
        android:text="@string/rule_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:textColor="@color/md_black_1000"
        android:textSize="@dimen/text_16sp"
        android:text="@string/rule_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:textColor="@color/md_black_1000"
        android:textSize="@dimen/text_16sp"
        android:text="@string/rule_3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:textColor="@color/md_black_1000"
        android:textSize="@dimen/text_16sp"
        android:text="@string/rule_4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:textColor="@color/md_black_1000"
        android:textSize="@dimen/text_16sp"
        android:text="@string/rule_5"/>

    </LinearLayout>
</LinearLayout>